prefect/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prefect-ingress
  namespace: prefect
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: traefik
  rules:
  - host: prefect.mynet.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prefect-server
            port:
              number: 4200
